--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,6 +94,9 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script src="/js/customValidate.js"></script>
+    <script src="/js/jQuery-3.2.1.js"></script>
+    <script src="/js/jQuery.validate.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
