--- a/views/coach/register.ejs
+++ b/views/coach/register.ejs
@@ -12,7 +12,7 @@ if (flash.length > 0) { //Check for error existence
 </ul>
 <% } %>
 
-<form action="/coach/create" method="POST" class="form-group" id="signupform">
+<form action="/coach/create" method="POST" class="form-signin" id="signupform">
   <h2 class="form-group-lg">Opprett ein konto</h2>
 
 
@@ -32,9 +32,17 @@ if (flash.length > 0) { //Check for error existence
   </div>
 
   <div class="control-group">
-  <label for="pw">Passord:</label>
-  <input id="pw" type="password" class="form-control" placeholder="Skriv inn ditt ønska passord her" name="password">
-  <input type="password" class="form-control" placeholder="Vennligst bekreft ønska passord" name="confirmation">
+    <label for="tlf">Telefonnummer::</label>
+    <input id="tlf" type="number" class="form-control" placeholder="Skriv inn ditt telefonnummer her" name="tlf">
+  </div>
+
+  <div class="control-group">
+  <label for="password">Passord:</label>
+  <input id="password" type="password" class="form-control" placeholder="Skriv inn ditt ønska passord her" name="password">
+  </div>
+  <div class="control-group">
+    <label for="confirmation">Bekreft passord:</label>
+  <input id="confirmation" type="password" class="form-control" placeholder="Vennligst bekreft ønska passord" name="confirmation">
   </div>
 
   <br />
