--- a/views/coach/new.ejs
+++ b/views/coach/new.ejs
@@ -1,4 +1,7 @@
-<h1>User Signup Form</h1>
+<form action="/coach/create" method="POST" class="form-signin" id="signupform">
+  <h2 class="form-group-lg">Opprett ein konto</h2>
+
+
 
 <%
 var flash = _.clone(req.flash('err'));
@@ -6,24 +9,22 @@ if (flash.length > 0) { //Check for error existence
   console.log(flash);
 %>
 <ul class="alert alert-success">
-  <% Object.keys(flash).forEach(function(err){%>
-  <li><%- JSON.stringify(flash[err]) %></li>
-  <% }); %>
+  <% Object.keys(flash).forEach(function(err){ %>
+<li><%- JSON.stringify(flash[err]) %> </li>
+<% }); %>
 </ul>
 <% } %>
 
-<form action="/coach/create" method="POST" class="form-signin" id="signupform">
-  <h2 class="form-group-lg">Opprett ein konto</h2>
 
 
   <div class="control-group">
-  <label for="fn">Fornavn:</label>
-  <input id="fn" type="text" class="form-control" placeholder="Skriv inn ditt fornamn her" name="firstname">
+  <label for="firstname">Fornavn:</label>
+  <input id="firstname" type="text" class="form-control" placeholder="Skriv inn ditt fornamn her" name="firstname">
   </div>
 
   <div class="control-group">
-  <label for="en">Etternavn:</label>
-  <input id="en" type="text" class="form-control" placeholder="Skriv inn ditt etternamn her" name="lastname">
+  <label for="lastname">Etternavn:</label>
+  <input id="lastname" type="text" class="form-control" placeholder="Skriv inn ditt etternamn her" name="lastname">
   </div>
 
   <div class="control-group">
@@ -32,7 +33,7 @@ if (flash.length > 0) { //Check for error existence
   </div>
 
   <div class="control-group">
-    <label for="tlf">Telefonnummer::</label>
+    <label for="tlf">Telefonnummer:</label>
     <input id="tlf" type="number" class="form-control" placeholder="Skriv inn ditt telefonnummer her" name="tlf">
   </div>
 
