--- a/views/coach/new.ejs
+++ b/views/coach/new.ejs
@@ -3,19 +3,13 @@
 
 
 
-<%
-var flash = _.clone(req.flash('err'));
-if (flash.length > 0) { //Check for error existence
-  console.log(flash);
-%>
-<ul class="alert alert-success">
-  <% Object.keys(flash).forEach(function(err){ %>
-<li><%- JSON.stringify(flash[err]) %> </li>
-<% }); %>
-</ul>
-<% } %>
-
-
+  <% if(flash && flash.err) { %>
+  <ul class="alert alert-success">
+    <% Object.keys(flash.err).forEach(function(error) { %>
+    <li><%- JSON.stringify(flash.err[error]) %></li>
+    <% }) %>
+  </ul>
+  <% } %>
 
   <div class="control-group">
   <label for="firstname">Fornavn:</label>
