--- a/views/coach/new.ejs
+++ b/views/coach/new.ejs
@@ -23,7 +23,7 @@
 
   <div class="control-group">
   <label for="email">Epostadresse:</label>
-  <input id="email" type="email" class="form-control" placeholder="Skriv inn din epostadresse her" name="email">
+  <input id="email" type="text" class="form-control" placeholder="Skriv inn din epostadresse her" name="email">
   </div>
 
   <div class="control-group">
