--- a/views/coach/new.ejs
+++ b/views/coach/new.ejs
@@ -1,13 +1,15 @@
-<form action="/coach/create" method="POST" class="form-signin" id="signupform">
+<form action="/coach/create" method="POST" class="form-signin" id="signup-form">
   <h2 class="form-group-lg">Opprett ein konto</h2>
 
-
-
-  <% if(flash && flash.err) { %>
+  <%
+  var flash = _.clone(req.flash('err'));
+  if (flash.length > 0) { //Check for error existence
+    console.log(flash);
+  %>
   <ul class="alert alert-success">
-    <% Object.keys(flash.err).forEach(function(error) { %>
-    <li><%- JSON.stringify(flash.err[error]) %></li>
-    <% }) %>
+    <% Object.keys(flash).forEach(function(err){%>
+    <li><%- JSON.stringify(flash[err]) %></li>
+    <% }); %>
   </ul>
   <% } %>
 
