--- a/views/coach/show.ejs
+++ b/views/coach/show.ejs
@@ -2,8 +2,8 @@
   <h1><%= coach.firstname + '&nbsp;' + coach.lastname %> </h1>
 
   <hr>
-  <h3>Contact: <%- coach.tlf %> </h3>
-  <h3><%- coach.email %> </h3>
+  <h3>Contact: <%= coach.tlf %> </h3>
+  <h3><%= coach.email %> </h3>
 
   <a class="btn btn-medium btn-primary" href="/coach/edit/<%= coach.id %>">Edit</a>
 
