--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -98,6 +98,7 @@
     <script src="/js/customValidate.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/jQuery-3.2.1.js"></script>
+    <script src="/js/underscore.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
