--- a/views/coach/index.ejs
+++ b/views/coach/index.ejs
@@ -3,10 +3,10 @@
   <table class='table'>
     <tr>
       <th>ID</th>
-      <th>Name</th>
+      <th>Firstame</th>
+      <th>Lastname</th>
+      <th>TLF</th>
       <th>Email</th>
-      <th></th>
-      <th></th>
       <th></th>
     </tr>
 
